fix: allow code to wrap

--- a/src/static/scss/prism.scss
+++ b/src/static/scss/prism.scss
@@ -108,6 +108,7 @@ pre[class*="language-"] {
 	padding: 0.2em 0.3em;
 	border-radius: 0.3em;
 	white-space: normal;
+  overflow-wrap: break-word;
 }
 
 /* Print */
